[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Screen/Screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level/Shaker.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Level/DSC08122.PNG" type="Texture" id=4]
[ext_resource path="res://Scenes/Level/power2.PNG" type="Texture" id=5]
[ext_resource path="res://Scenes/Level/ms.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Level/logo.PNG" type="Texture" id=7]
[ext_resource path="res://Scenes/Level/Splash.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Level/LettersBallet.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Enemies/Cutscene/CutsceneWord.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level/ms_bsod.tres" type="DynamicFont" id=11]
[ext_resource path="res://Scenes/Level/win_text.tres" type="DynamicFont" id=12]
[ext_resource path="res://Scenes/Level/win_text2.tres" type="DynamicFont" id=13]
[ext_resource path="res://Scenes/Level/click.oggstr" type="AudioStream" id=14]
[ext_resource path="res://Scenes/Level/splash.wav" type="AudioStream" id=15]
[ext_resource path="res://Scenes/Level/music.ogg" type="AudioStream" id=16]
[ext_resource path="res://Scenes/Level/bdos.wav" type="AudioStream" id=17]
[ext_resource path="res://Scenes/Level/alert.oggstr" type="AudioStream" id=18]
[ext_resource path="res://Scenes/Level/brouhaha.oggstr" type="AudioStream" id=19]
[ext_resource path="res://Scenes/Level/help_arrow.png" type="Texture" id=20]

[sub_resource type="CapsuleShape2D" id=1]
radius = 167.416
height = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 308.538, 169.653 )

[node name="Level" type="Node2D"]
position = Vector2( 1.41418, 36.7695 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
z_index = 3
z_as_relative = false
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 6, 6 )
script = ExtResource( 3 )

[node name="ShakeTimer" type="Timer" parent="Camera2D"]
wait_time = 0.2
one_shot = true

[node name="Screen" parent="." instance=ExtResource( 2 )]
position = Vector2( -1450.09, -1670.9 )
scale = Vector2( 1.0317, 1.0317 )
z_index = -1

[node name="Splash" type="Node2D" parent="."]
visible = false
z_index = 2
script = ExtResource( 8 )

[node name="Logo" type="Sprite" parent="Splash"]
position = Vector2( 26.6968, -1014.48 )
texture = ExtResource( 7 )

[node name="OS" type="Label" parent="Splash"]
margin_left = -264.802
margin_top = -559.19
margin_right = 352.198
margin_bottom = -377.19
custom_fonts/font = ExtResource( 6 )
text = "Greg'OS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashDelay" type="Timer" parent="Splash"]
wait_time = 0.4
one_shot = true

[node name="SplashLifetime" type="Timer" parent="Splash"]
wait_time = 2.0
one_shot = true

[node name="SplashPostmortem" type="Timer" parent="Splash"]
one_shot = true

[node name="SplashSound" type="AudioStreamPlayer2D" parent="Splash"]
stream = ExtResource( 15 )
volume_db = 3.881

[node name="BlackScreen" type="ColorRect" parent="."]
margin_left = -1493.13
margin_top = -1670.75
margin_right = 1606.87
margin_bottom = 29.2526
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LettersBallet" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="DeathStareTimer" type="Timer" parent="LettersBallet"]
one_shot = true

[node name="Words" type="Node2D" parent="LettersBallet"]

[node name="LD47" parent="LettersBallet/Words" instance=ExtResource( 10 )]
position = Vector2( -175.028, -1597.54 )
word = "LD 47"

[node name="Loading" parent="LettersBallet/Words" instance=ExtResource( 10 )]
position = Vector2( -175.028, -1417.54 )
word = "Loading"
scaling = 0.7

[node name="DoNot" parent="LettersBallet/Words" instance=ExtResource( 10 )]
position = Vector2( -687.028, -505.54 )
word = "Do NOT press power button"
scaling = 0.7

[node name="FleeTimer" type="Timer" parent="LettersBallet"]
wait_time = 2.3
one_shot = true

[node name="DeathStareDelay" type="Timer" parent="LettersBallet"]
one_shot = true

[node name="FaceDelay" type="Timer" parent="LettersBallet"]
wait_time = 0.5
one_shot = true

[node name="AlertSound" type="AudioStreamPlayer2D" parent="LettersBallet"]
stream = ExtResource( 18 )
volume_db = 13.91

[node name="Brouhaha" type="AudioStreamPlayer2D" parent="LettersBallet"]
stream = ExtResource( 19 )
volume_db = -10.09

[node name="PowerButton" type="Node2D" parent="."]
z_index = 1

[node name="PowerButtonSplash" type="Area2D" parent="PowerButton"]
position = Vector2( 1276.11, 598.008 )

[node name="PowerColliderSplash" type="CollisionShape2D" parent="PowerButton/PowerButtonSplash"]
position = Vector2( -2.82507, 4.7193 )
z_index = 2
shape = SubResource( 1 )

[node name="PowerButtonStart" type="Area2D" parent="PowerButton"]
visible = false
position = Vector2( 1276.11, 598.008 )

[node name="PowerColliderStart" type="CollisionShape2D" parent="PowerButton/PowerButtonStart"]
position = Vector2( -2.82507, 4.7193 )
z_index = 2
shape = SubResource( 1 )

[node name="PowerSprite" type="Sprite" parent="PowerButton"]
position = Vector2( 1276.11, 598.008 )
scale = Vector2( 0.392401, 0.38901 )
z_index = 2
texture = ExtResource( 5 )

[node name="ClickSound" type="AudioStreamPlayer2D" parent="PowerButton"]
stream = ExtResource( 14 )

[node name="Cheat" type="Area2D" parent="."]
visible = false
z_index = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cheat"]
position = Vector2( -2280, 648 )
shape = SubResource( 2 )

[node name="BSOD" type="Node2D" parent="."]
visible = false

[node name="BSOD_screen" type="ColorRect" parent="BSOD"]
margin_left = -1467.0
margin_top = -1658.0
margin_right = 1537.0
margin_bottom = -5.0
color = Color( 0.0313726, 0.152941, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BSOD_text" type="Label" parent="BSOD"]
margin_left = -1376.44
margin_top = -1611.16
margin_right = 5381.56
margin_bottom = -760.162
custom_fonts/font = ExtResource( 11 )
text = "A problem has been detected and Windows has been shut down to prevent damage to your computer.

If this is the first time you've seen this stop error screen, restart your computer. if this screen appears again, follow these steps:

Check to make sure any new hardware or software is properly installed. I this is a new installation, ask your hardware or software 
manufacturer for and Windows updates you might need.

If problems continue, disable or remove any newly installed hardware or software. Disable BIOS memory options such as caching 
or shadowing. If you need to use Safe Mode to remove or disable components, restart your computer, press F8 to select 
Advanced Startup Options, and then select Safe Mode.

Technical information:

*** STOP: 0x000000FE (0x00000008, 0x000000006, 0x00000009, 0x847075cc)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionText" type="Label" parent="BSOD"]
margin_left = -483.793
margin_top = -471.185
margin_right = 677.207
margin_bottom = -300.185
custom_fonts/font = ExtResource( 6 )
text = "Press R to restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BsodSound" type="AudioStreamPlayer2D" parent="BSOD"]
stream = ExtResource( 17 )

[node name="BSOD_pop_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="WinScreen" type="Node2D" parent="."]
visible = false

[node name="Win" type="ColorRect" parent="WinScreen"]
margin_left = -1448.0
margin_top = -1653.0
margin_right = 1530.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinText" type="Label" parent="WinScreen"]
margin_left = -347.342
margin_top = -967.62
margin_right = 321.658
margin_bottom = -614.62
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "\\^o^/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinText2" type="Label" parent="WinScreen"]
margin_left = -840.699
margin_top = -1484.15
margin_right = 814.301
margin_bottom = -1131.15
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "It was LD 47"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinText3" type="Label" parent="WinScreen"]
margin_left = -726.355
margin_top = -432.151
margin_right = 2220.64
margin_bottom = -79.1515
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thank you for playing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -2.328

[node name="ArrowHelperDelay" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ArrowHelper" type="Sprite" parent="."]
visible = false
position = Vector2( 1060.38, -203.187 )
rotation = 1.30201
z_index = 5
texture = ExtResource( 20 )
[connection signal="timeout" from="Camera2D/ShakeTimer" to="Camera2D" method="_on_ShakeTimer_timeout"]
[connection signal="on_hit" from="Screen/Loading" to="." method="_on_Loading_on_hit"]
[connection signal="win" from="Screen/Loading" to="." method="_on_Loading_win"]
[connection signal="end_splash" from="Splash" to="." method="_on_Splash_end_splash"]
[connection signal="timeout" from="Splash/SplashDelay" to="Splash" method="_on_SplashDelay_timeout"]
[connection signal="timeout" from="Splash/SplashLifetime" to="Splash" method="_on_SplashLifetime_timeout"]
[connection signal="timeout" from="Splash/SplashPostmortem" to="Splash" method="_on_SplashPostmortem_timeout"]
[connection signal="timeout" from="LettersBallet/DeathStareTimer" to="LettersBallet" method="_on_DeathStareTimer_timeout"]
[connection signal="timeout" from="LettersBallet/FleeTimer" to="." method="_on_FleeTimer_timeout"]
[connection signal="timeout" from="LettersBallet/DeathStareDelay" to="LettersBallet" method="_on_DeathStareDelay_timeout"]
[connection signal="timeout" from="LettersBallet/FaceDelay" to="LettersBallet" method="_on_FaceDelay_timeout"]
[connection signal="input_event" from="PowerButton/PowerButtonSplash" to="Splash" method="_on_PowerButtonSplash_input_event"]
[connection signal="input_event" from="PowerButton/PowerButtonStart" to="LettersBallet" method="_on_PowerButtonStart_input_event"]
[connection signal="input_event" from="Cheat" to="." method="_on_Cheat_input_event"]
[connection signal="timeout" from="BSOD_pop_timer" to="." method="_on_BSOD_pop_timer_timeout"]
[connection signal="timeout" from="ArrowHelperDelay" to="." method="_on_ArrowHelperDelay_timeout"]

[editable path="Screen"]
